--- a/style.css
+++ b/style.css
@@ -130,8 +130,8 @@ margin-right: auto;
     }
 
 .frente {
-    font-weight: 700;
-    color: rgb(31, 39, 51)
+    font-weight: bolder;
+    color: rgb(31, 39, 51);
 }
 
 .icone {
